src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer components {
    .footer {
        @apply bg-primary text-white w-screen;
    }
    .header {
        @apply shadow-md items-center justify-between bg-white w-screen;
    }
    .container-flex {
        @apply px-2 py-5 flex sm:px-10 sm:py-7 lg:px-16 xl:px-20 2xl:px-24;
    }
    .button {
        @apply px-4 py-2 rounded-md font-semibold text-lg bg-white;
    }
}

@layer utilities {
    .bg-primary {
        background-color: #0038ff;
    }
    .text-primary {
        color: #0038ff;
    }
}

::selection {
    background-color: #0038ff;
    color: #fff;
}

